# vartal_pulse_neo_to_mqtt

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  battery_mqtt_service.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.bat  setup.sh
.github/workflows/: docker.yml
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
docs/: INSTALLATION.md
src/varta_mqtt/: __init__.py  __main__.py  modbus_poller.py  service.py
tests/: __init__.py  test_service.py
